--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kitsuneislife/miau-index",
-  "version": "1.0.1",
-  "description": "A powerful TypeScript anime indexer that aggregates and unifies anime data from multiple sources",
+  "version": "1.1.0",
+  "description": "A powerful TypeScript anime indexer that aggregates and unifies anime data from multiple sources including episodes, seasons, and torrents",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
